# nix-options-search

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  default.nix  flake.nix  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  scheduled.yml  zizmor.yml
data/: index-short.html  nix-darwin-index.html
docs/: nox.tape
src/: app.rs  cache.rs  cli.rs  finder.rs  logging.rs  main.rs  opt_data.rs  opt_display.rs  parsing.rs  project_paths.rs  search.rs  source.rs  test_utils.rs  tui.rs
src/config/: app_config.rs  consts.rs  mod.rs  project_paths.rs  user_config.rs
src/config/user_config/: tests.rs
testing/: update_sources.py
testing/data/Home Manager/: url  version_url
testing/data/Home Manager Nix-Darwin/: url
testing/data/Home Manager NixOS/: url
testing/data/Nix Built-ins/: data_html  url
testing/data/Nix-Darwin/: data_html  url
testing/data/NixOS/: url  version_html  version_url
testing/data/NixOS Unstable/: url  version_html  version_url
