[package]
name = "nix-options-search"
version = "0.3.2"
edition = "2021"
description = "A tool to fuzzy find nix-darwin and nixOS configuration options"
keywords = ["cli", "utility", "tui", "nix"]
categories = ["command-line-utilities"]
repository = "https://github.com/madsbv/nix-options-search"
license = "MIT OR Apache-2.0"
include = ["src/*", "data/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nox"
path = "src/main.rs"

[features]
online-tests = []

[dependencies]
bitcode = "0.6.4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "6.0.0"
html2text = "0.13.6"
nucleo = "0.5.0"
open = "5.3.2"
ratatui = "0.29.0"
tempfile = "3.10.1"
tl = "0.7.8"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
tui-widget-list = "0.13.2"
ureq = "2.10.0"
zstd = "0.13.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

