[package]
name = "nix-options-search"
version = "0.3.5"
edition = "2021"
description = "A tool to fuzzy find nix-darwin and nixOS configuration options"
keywords = ["cli", "utility", "tui", "nix"]
categories = ["command-line-utilities"]
repository = "https://github.com/madsbv/nix-options-search"
license = "MIT OR Apache-2.0"
include = ["src/*", "data/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nox"
path = "src/main.rs"

[features]
online-tests = []

[dependencies]
bitcode = "0.6.4"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
directories = "6.0.0"
html2text = "0.16.5"
lazy-regex = { version = "3.4.2", features = ["lite"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
nucleo = "0.5.0"
open = "5.3.3"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3.23.0"
tl = "0.7.8"
tracing = "0.1.43"
toml = "0.9.8"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "env-filter"] }
tui-widget-list = "0.13.3"
ureq = "3.0.5"
zstd = "0.13.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
deprecated-safe = {level = "deny", priority = 0}
future-incompatible = {level = "deny", priority = 0}
keyword-idents = {level = "deny", priority = 0}
let-underscore = {level = "warn", priority = 0}
unused = {level = "warn", priority = -1}

[lints.clippy]
all = {level = "warn", priority = -1}
pedantic = {level = "warn", priority = -1}
cargo = {level = "warn", priority = -1}
unwrap_used = "warn"
multiple_crate_versions = "deny"
similar_names = "allow"
